backend/proclone-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: proclone-backend
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: proclone-backend
