backend/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: egress-proxmox-dr
spec:
  host: [proxmox.server.address] # replace
  trafficPolicy:
    tls:
      mode: SIMPLE
